# FlaschPlayer

./: .gitignore  Procfile  README.adoc  README.md  architecture.puml  blinky.py  blinky_bot.py  blinky_interface.py  component-diagram.puml  config.py  display.py  display_test.py  entry_point.py  install-overmind.sh  layout.py  letters.py  neopixel_debug.py  pgt.py  programmatic_player.py  pushover.py  pyproject.toml  queue.py  requirements.txt  text_queue.py  thequeue.py
.claude/: settings.local.json
config/: blinky.service  bot_blinky.service
config_files/: blinky.service  dbus_config.py
programs/: README.md  __init__.py  aurora.py  bouncing_balls.py  clock.py  equalizer.py  fire.py  flow_field.py  kaleidoscope.py  life.py  lissajous.py  mandelbrot.py  plasma.py  pong.py  rain.py  snake.py  space_invaders.py  starfield.py
templates/: landing.html  wait.html
tests/: test_layout.py
