[project]
name = "flaschplayer"
version = "0.1.0"
description = "LED Display Control System for RGB LED matrix built from beer crates"
requires-python = ">=3.11"
dependencies = [
    "Adafruit-Blinka>=8.67.0",
    "adafruit-circuitpython-busdevice>=5.2.6",
    "adafruit-circuitpython-requests>=1.14.0",
    "adafruit-circuitpython-typing>=1.9.4",
    "Adafruit-PlatformDetect>=3.84.0",
    "Adafruit-PureIO>=1.1.11",
    "anyio>=3.7.0",
    "APScheduler>=3.6.3",
    "cachetools>=4.2.2",
    "certifi>=2023.5.7",
    "ffmpy>=0.3.0",
    "filelock>=3.12.2",
    "h11>=0.14.0",
    "honcho>=1.1.0",
    "httpcore>=0.17.2",
    "httpx>=0.24.1",
    "idna>=3.4",
    "numpy>=2.3.0",
    "Pillow>=10.0.0",
    "pygame-ce>=2.5.0",
    "pyftdi>=0.54.0",
    "pyserial>=3.5",
    "python-telegram-bot>=21.0",
    "pytz>=2023.3",
    "pyusb>=1.2.1",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "tornado>=6.3.2",
    "typing_extensions>=4.6.3",
    "tzlocal>=5.0.1",
]
