[project]
name = "flaschplayer"
version = "0.1.0"
description = "LED Display Control System for RGB LED matrix built from beer crates"
requires-python = ">=3.13"
dependencies = [
    "Adafruit-Blinka>=8.67.0",
    "adafruit-circuitpython-busdevice>=5.2.6",
    "adafruit-circuitpython-requests>=1.14.0",
    "adafruit-circuitpython-typing>=1.9.4",
    "Adafruit-PlatformDetect>=3.84.0",
    "Adafruit-PureIO>=1.1.11",
    "APScheduler>=3.10",
    "ffmpy>=0.3.0",
    "filelock>=3.12.2",
    "numpy>=2.3.0",
    "Pillow>=10.0.0",
    "pygame-ce>=2.5.0",
    "pyftdi>=0.54.0",
    "pyserial>=3.5",
    "python-telegram-bot>=21.0",
    "pyusb>=1.2.1",
    "tornado>=6.3.2",
    "typing_extensions>=4.6.3",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
